<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailUserActivity">

    <ImageView
        android:id="@+id/img_detail_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/before_show"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_detail_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/before_show"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/img_detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/before_show"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/before_show"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company" />

    <TextView
        android:id="@+id/followers_title"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/followers"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_avatar" />

    <TextView
        android:id="@+id/tv_detail_followers"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/before_show"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/followers_title"
        app:layout_constraintStart_toStartOf="@+id/followers_title"
        app:layout_constraintTop_toBottomOf="@+id/followers_title" />

    <TextView
        android:id="@+id/following_title"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/following"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/repository_title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/followers_title"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_avatar" />

    <TextView
        android:id="@+id/tv_detail_following"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/before_show"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/following_title"
        app:layout_constraintStart_toStartOf="@+id/following_title"
        app:layout_constraintTop_toBottomOf="@+id/following_title" />

    <TextView
        android:id="@+id/repository_title"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/repositories"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_repository"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_avatar" />

    <TextView
        android:id="@+id/tv_detail_repository"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/before_show"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/repository_title"
        app:layout_constraintStart_toStartOf="@+id/repository_title"
        app:layout_constraintTop_toBottomOf="@+id/repository_title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/dark_blue"
        android:contentDescription="@string/tab_layout"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers"
        app:tabTextColor="@color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tabs"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#F06292"
        app:tint="@null"
        android:contentDescription="@string/favorite_desc"
        android:src="@drawable/ic_baseline_favorite_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>